Start using pdflatex

--- a/ex01/exercise.tex
+++ b/ex01/exercise.tex
@@ -79,7 +79,7 @@
 
     \begin{figure}[h]
       \begin{center}
-        \includegraphics[width=12cm]{sigmoid.eps}
+        \includegraphics[width=12cm]{sigmoid}
         \caption{\label{fig:sigmoid} Sigmoid function $\varphi(v)$ with
           different values of $a$. The function behaves linearly near the
           origin.}
