--- a/ex02/exercise.tex
+++ b/ex02/exercise.tex
@@ -242,7 +242,7 @@
       \psfrag{w1}{$\psi_1$}
       \psfrag{w2}{$\psi_2$}
       \begin{center}
-        \includegraphics[scale=0.35]{e4_5.eps}
+        \includegraphics[scale=0.35]{e4_5}
       \end{center}
 
       Classifications are carried out as follows:
@@ -260,7 +260,7 @@
         &\psi_2: \text{\;} \{ [1,2]^T,[2,1]^T \} \notag
       \end{align}
       \begin{center}
-        \includegraphics[scale=0.35]{e4_5b.eps}
+        \includegraphics[scale=0.35]{e4_5b}
       \end{center}
 
       It is not possible to separate the classes with a single
