--- a/ex04/exercise.tex
+++ b/ex04/exercise.tex
@@ -44,7 +44,7 @@
 
   \begin{figure}[hbp]
     \centering
-    \includegraphics[width=7cm]{mlp_classification.ps}
+    \includegraphics[width=7cm]{mlp_classification}
     \label{61}
     \caption{Classes $\mathcal{C}_1$ and $\mathcal{C}_2$.}
   \end{figure}
@@ -67,7 +67,7 @@
     \psfrag{c2}{$\mathcal{C}_2$}
 
     \begin{center}
-      \includegraphics[scale=0.35]{e61.eps}
+      \includegraphics[scale=0.35]{e61}
     \end{center}
 
     The classification task can be solved using three linear classifiers
@@ -76,7 +76,7 @@
 
     The network:
     \begin{center}
-      \includegraphics[scale=0.35]{e61-2.eps}
+      \includegraphics[scale=0.35]{e61-2}
     \end{center}
     % 
     The input to the network relates to the coordinate axis by
