--- a/ex05/exercise.tex
+++ b/ex05/exercise.tex
@@ -65,7 +65,7 @@
     % 
     % \vskip -2cm
     \begin{figure}[h]
-      \includegraphics[height=3.5cm]{fig1.eps}
+      \includegraphics[height=3.5cm]{fig1}
       \caption{Gradient gives the direction of steepest descent at a point. The figure demonstrates
         the fact that the gradient descent method with line search always finds a local minimum, but not necessarily
         the global one.}       
