--- a/ex09/exercise.tex
+++ b/ex09/exercise.tex
@@ -233,7 +233,8 @@
 
     Finally: Transform back with ${\bf W}^T$ (note: ${\bf W}$ was orthogonal)
 
-    \includepdf{ex9_answer_page4}
+    % Is this somewhere?
+    %\includepdf{ex9_answer_page4}
   \end{solution}
 
   
