--- a/ex10/exercise.tex
+++ b/ex10/exercise.tex
@@ -219,10 +219,10 @@
     \begin{figure}[h]
       \centering
       \begin{tabular}{cc}
-        \includegraphics[width=0.35\textwidth]{v121-f1.eps} &
-        \includegraphics[width=0.35\textwidth]{v121-f2.eps} \\
+        \includegraphics[width=0.35\textwidth]{v121-f1} &
+        \includegraphics[width=0.35\textwidth]{v121-f2} \\
         {\bf a} &{\bf b}\\
-        \includegraphics[width=0.35\textwidth]{v121-f3f.eps} &\\
+        \includegraphics[width=0.35\textwidth]{v121-f3f} &\\
         {\bf c} &
       \end{tabular}
       \caption{An example of a one-dimensinal SOM with two-dimensional input
