--- a/ex11/exercise.tex
+++ b/ex11/exercise.tex
@@ -117,7 +117,7 @@
 
     % \hspace{2cm}
     \begin{center}
-      \includegraphics[width=11cm]{l12k3a.eps}
+      \includegraphics[width=11cm]{l12k3a}
     \end{center}
 
     % 
@@ -190,7 +190,7 @@
 \item Write out the state-space model for the recurrent network shown in the
   figure.
 
-  \hspace{2cm}\includegraphics[width=11cm]{l12k9.eps}
+  \hspace{2cm}\includegraphics[width=11cm]{l12k9}
 
   \begin{solution}
 
