Add JPEGs for Ex7.4 demo

--- a/ex07/exercise.tex
+++ b/ex07/exercise.tex
@@ -241,7 +241,13 @@
   the double-moon classification problem.
 
   \begin{solution}
-    \includegraphics[width=0.4\linewidth]{ex07_04_lms.jpg}
+    \begin{center}
+      \includegraphics[width=0.7\linewidth]{ex07_04_lms.jpg}
+      \\
+      \includegraphics[width=0.7\linewidth]{ex07_04_mlp1.jpg}
+      \\
+      \includegraphics[width=0.7\linewidth]{ex07_04_rbf1.jpg}
+    \end{center}
   \end{solution}
   
 % \item Derive the learning rules for the stochastic gradient method for
