Add citation to Haykin 2009 in Ex7.4

--- a/ex07/exercise.tex
+++ b/ex07/exercise.tex
@@ -241,6 +241,9 @@
   the double-moon classification problem.
 
   \begin{solution}
+    The following figures are from Simon Haykin \emph{Neural Networks
+      and Learning Machines (Third Edition)} 2009 (Pearson Education).
+    
     \begin{center}
       \includegraphics[width=0.7\linewidth]{ex07_04_lms.jpg}
       \\
