Fix sign in Ex6.2

--- a/ex06/exercise.tex
+++ b/ex06/exercise.tex
@@ -105,7 +105,7 @@
     \]
 
     \[
-    \frac{\partial \mathcal{E}}{\partial \vect{w}} = \Phi^T \vect{t} + \Phi^T
+    \frac{\partial \mathcal{E}}{\partial \vect{w}} = -\Phi^T \vect{t} + \Phi^T
     \Phi \vect{w} + \lambda \vect{w} = 0
     \]
 
