--- a/ex08/exercise.tex
+++ b/ex08/exercise.tex
@@ -326,8 +326,19 @@
     result can be worse.
 
   \end{solution}
-  
 
+
+\item (demo) Solve the double-moon classification problem with SVM.
+
+  \begin{solution}
+    The following figures are from Simon Haykin \emph{Neural Networks
+      and Learning Machines (Third Edition)} 2009 (Pearson Education).
+
+    \begin{center}
+      \includegraphics[width=0.7\linewidth]{ex08_05_svm.jpg}
+    \end{center}
+  \end{solution}
+    
 \end{enumerate}
 \end{document}             % End of document.
 
